# filip-hackathon

./: README.md  docker-compose.yaml  package-lock.json
filip-backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  env.sample  manage.py  pyproject.toml  setup.cfg
filip-backend/api/: admin.py  urls.py
filip-backend/api/ai/: __init__.py  agent_rag_course.py  agent_rag_skills.py  response_validation.py  skill_gap_graph.py  validated_course_agent.py  validation_config.py
filip-backend/api/migrations/: 0001_initial.py  0002_document_documentchunk.py  0003_course_learningpath_skill_pathcourse_and_more.py  0004_udemycourse.py  0005_learningpath_new_fields.py  0006_delete_item.py  0007_jobpost.py  0007_remove_learningpath_courses_and_more.py  0008_merge_20250610_0459.py  0008_remove_learningpath_progress.py  0009_merge_20250610_1329.py  0010_learningpathcourse_course_url.py  0011_jobpost_job_id_alter_jobpost_id.py  0012_alter_jobpost_job_id.py  0013_rename_instructor_course_instructors_and_more.py  0014_remove_documentchunk_document_and_more.py  0015_alter_learningpath_completed_hours_and_more.py  0016_learningpath_created_at_and_more.py  0017_alter_learningpath_created_at.py  0018_alter_learningpath_completed_hours_and_more.py
filip-backend/api/models/: __init__.py  jobs.py  skill.py  (+3 more)
filip-backend/data/: coursera.csv  coursera.json  learning_paths.json  skills.json  udemy_courses_with_prices.csv
filip-backend/docs/: setup-backend.md
filip-backend/filip/: asgi.py  settings.py  urls.py  wsgi.py
filip-backend/scripts/: convert_skills_to_json.py
(+91 files in other folders)
